--- a/linkedoffer2/fillup2.html
+++ b/linkedoffer2/fillup2.html
@@ -12,8 +12,9 @@
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" href="favicon.ico" type="image/png "> 
+	<link rel="icon" href="favicon.ico" type="image/png "> 
 	<script src="data.js"></script>
-	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
 	<style type="text/css">
 		body{
 			background-color: #2D2D2D;
