--- a/linkedoffer2/index.html
+++ b/linkedoffer2/index.html
@@ -12,6 +12,8 @@
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
 	<link href="main.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" href="favicon.ico" type="image/png "> 
+	<link rel="icon" href="favicon.ico" type="image/png "> 
 	<style>
 	</style>
 </head>
