--- a/linkedoffer2/prediction.html
+++ b/linkedoffer2/prediction.html
@@ -11,7 +11,8 @@
 	<meta name="Copyright" content="Copyright linkedoffer All Rights Reserved.">
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
-	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
+	<link rel="shortcut icon" href="favicon.ico" type="image/png "> 
+	<link rel="icon" href="favicon.ico" type="image/png "> 
 	<style>
 		body{
 			background-color: #2D2D2D;
