--- a/linkedoffer2/startpredict.html
+++ b/linkedoffer2/startpredict.html
@@ -35,6 +35,11 @@
 			height: 100px;
 			font-size: 16px;
 		}
+		#footi{
+			position: fixed;
+			bottom: 10px;
+			right: 10px;
+		}
 	</style>
 </head>
 <body>
