--- a/linkedoffer2/getkeys.html
+++ b/linkedoffer2/getkeys.html
@@ -15,19 +15,23 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/png "> 
 	<link rel="icon" href="favicon.ico" type="image/png "> 
 	<style>
-		h4,h5{
+		h3,h4,h5{
 			font-family: "微软雅黑";
 			font-weight: normal;
 			/*text-align: center;*/
 			font-size: 14px;
 			margin-top: 10px;
 			margin-bottom: 10px;
+			text-align: center;
+		}
+		h3{
+			font-size: 18px;
 		}
 		h4{
 			font-size: 16px;
 		}
 		h4{
-			margin-top: 30px;
+			line-height: 30px;
 			text-align: center;
 		}
 		h4:first-child{
@@ -36,7 +40,6 @@
 		}
 		button{
 			margin-top: 80px;
-			margin-bottom: 80px;
 		}
 		h4 a{
 			background-color: transparent;
@@ -44,18 +47,23 @@
 			text-decoration: none;
 			color: #EC8515;
 		}
+		#footi{
+			margin-top: 100px;
+		}
 		#footi a{
 			margin-top: 10px;
 		}
 	</style>
 </head>
 <body>
-	<h4>LINKEDOFFER——连接你身边的HR</h4>
+	<h3>Linked<font color="#EC8515">offer</font></h3>
+	<h3 style="color:#EC8515" >连接你身边的HR</h3>
 	<h4>致力于向青年提供互联网实习机会</h4>
 	<h4>基于连接HR邮箱的社交化招聘</h4>
-	<h4>一次申请，十个HR关注，直接领offer！</h4>
+	<h4>1次申请，10个HR关注</h4>
 	<button type="submit" onclick="test()">获取密钥</button>
-	<h4 style="color:#808080;">已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
+	<h4>详情请点击右下角按钮</h4>
+	<h4 style="margin-top:60px;">已有产品或demo请戳：<a href="submitpieces.html" tppabs="">大牛通道</a></h4>
 	<div id="footi">注：我们将会有选择性的发放五百个名额，每天零点更新。
 		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
 	</div>
