--- a/rc/index.html
+++ b/rc/index.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body onmousedown="Pause ()" touchstart="Pause ()">
+<body onmousedown="Pause ()">
 <div id="bg">Tap the creen to pause <br>Tap again to continue <br>By Parizus</div>
 </body>
 <script type="text/javascript">
