--- a/rc/index.html
+++ b/rc/index.html
@@ -18,7 +18,10 @@
         #bg{
             width: 100%;
             height: 100%;
-            background-color: #fff;            
+            background-color: #fff;
+text-align:center; 
+margin-top:30%;
+font-size:28px;
             transition:  2s;
             -moz-transition: 2s;
             -webkit-transition:  2s;
