--- a/rc/index.html
+++ b/rc/index.html
@@ -29,7 +29,7 @@ font-size:28px;
         }
     </style>
 </head>
-<body onMouseDown="Pause ()">
+<body ontouchend="Pause ()">
 <div id="bg">Tap the creen to pause <br>Tap again to continue <br>By Parizus</div>
 </body>
 <script type="text/javascript">
