--- a/rc/index.html
+++ b/rc/index.html
@@ -29,8 +29,8 @@ font-size:28px;
         }
     </style>
 </head>
-<body ontouchend="Pause ()">
-<div id="bg">Tap the creen to pause <br>Tap again to continue <br>By Parizus</div>
+<body>
+<div id="bg" onclick="Pause ()">Tap the creen to pause <br>Tap again to continue <br>By Parizus</div>
 </body>
 <script type="text/javascript">
     var BG = document.getElementById("bg");
