--- a/rc/index.html
+++ b/rc/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body ontouchend="Pause()" onkeydown="Pause()">
-<div id="bg">Tap the creen/Press any key to pause <br>Tap/Press again to continue <br>By Parizus</div>
+<div id="bg">Tap the screen/Press any key to pause <br>Tap/Press again to continue <br>By Parizus</div>
 </body>
 <script type="text/javascript">
     var BG = document.getElementById("bg");
