--- a/linkedoffer/mobile/fillup2.html
+++ b/linkedoffer/mobile/fillup2.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
 	<title>填写信息获取密匙</title>
@@ -11,12 +11,25 @@
 	<meta name="Copyright" content="Copyright linkedoffer All Rights Reserved.">
 	<meta name="MSSmartTagsPreventParsing" content="true">
 	<meta http-equiv="imagetoolbar" content="false">
-	<!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
+	<link href="main.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" href="favicon.ico" type="image/png "> 
+	<link rel="icon" href="favicon.ico" type="image/png "> 
+	<script src="data.js"></script>
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?f5c49d861e5d51cf04e8d1ce078b018f";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 	<style type="text/css">
 		body{
 			background-color: #2D2D2D;
 			color: white;
-			/*font-family: "微软雅黑";*/
+			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
 		}
 		#myform{
 			margin-top: 20px;
@@ -27,46 +40,9 @@
 			font-size: 14px;
 			font-weight: lighter;
 		}
-		button{
-			display: block;
-			margin: 0 auto;
-			font-family: "微软雅黑";
-			padding-top: 10px;
-			padding-bottom: 10px;
-			margin-top: 10px;
-			border: none;
-			border-radius: 5px;
-			width: 120px;
-			background-color: #ec8515;
-			color: white;
-			font-size: 18px;
-			text-align: center;
-		}
-		button:active{
-			background-color: #FFF6E5;
-			border: none;
-			outline-style: none;
-		}
-		button:focus{
-			background-color: #d67000;
-			border: none;
-			outline-style: none;
-		}
-		.inputt{
-			margin-top: 8px;
-			border-radius: 8px;
-			/*border: 1px solid #575757; */
+		select {
+			width: 77%;
 			height: 40px;
-			padding-left: 8px;
-			/*padding-right: 8px;*/
-			background-color: #3e3a39;
-			font-family: "微软雅黑";
-			font-size: 14px;
-			line-height: 40px;
-		}
-		input {
-			width: 75%;
-			height: 20px;
 			padding-top: 10px;
 			padding-bottom: 10px;
 			padding-left: 5px;
@@ -76,12 +52,14 @@
 			font-size: 14px;
 			line-height: 20px;
 			overflow:hidden;
-			background-color: #fff;
+			background-color: #D6D6D6;
 			color: #3e3a39;
 			float: right;
 		}
-		input:focus{
+		select:focus{
 			outline-style: none;
+		}
+		select{
 		}
 		#light{
 			width:10px;
@@ -104,6 +82,13 @@
 			margin-top: 10px;
 			margin-bottom: 10px;
 			font-family: "微软雅黑",Arial,Helvetica,sans-serif;
+		}
+		#footi{
+			position: fixed;
+			bottom: 10px;
+			right: 10px;
+			font-size: 14px;
+			color:#a1a1a1;
 		}
 		.breathshut{
 			animation:myfirst 4s ease-in-out 0s alternate;
@@ -223,138 +208,88 @@
 	
 
 	<form  id="myform" onsubmit="" action="" enctype="" method="post">
-		<div class="inputt">姓名
-			<input onblur="check(this)" type="text" name="name" id="name" placeholder="姓名为必填">
+		<div class="inputt">岗位类别
+			<select id="GWleibie">
+				<option value="1">技术类</option>
+				<option value="2">产品类</option>
+				<option value="3">设计类</option>
+				<option value="4">市场、商务、销售、运营类</option>
+			</select>
 		</div>
-		<div class="inputt">电话
-			<input onblur="check(this)" type="text" name="phone" placeholder="电话为必填">
+		<div class="inputt">目标岗位
+			<select onfocus="changeopt(this);" ontouchstart="changeopt(this);" id="mubiaoGW">
+			</select>
 		</div>
-		<div class="inputt">邮箱
-			<input onblur="check(this)" type="text" name="email" placeholder="邮箱为必填">
+		<div class="inputt">城市类别
+			<select id="CSleibie">
+				<option value="1">北上广深杭</option>
+				<option value="2">其它一线</option>
+				<option value="3">一线外的省会城市</option>
+			</select>
 		</div>
-		<div class="inputt">学校
-			<input onblur="check(this)" type="text" name="school" placeholder="学校为必填">
-		</div>
-		<div class="inputt">毕业年份
-			<input onblur="check(this)" type="text" name="year" placeholder="(2010~2016),必填">
-		</div>
-		<div class="inputt">作品网盘
-			<input type="text" name="work" placeholder="作品网盘地址">
+		<div class="inputt">目标城市
+			<select onfocus="changeopt2(this);" ontouchstart="changeopt2(this);" id="mubiaoCS">
+			</select>
 		</div>
 		<!-- <h4>请填写基本信息</h4> -->
 		<div id="light" class="breath"></div>
-
-		<div id="warning"></div>
 	</form>
-	<button type="submit" id="btn" onfocus="blankc()" ontouchstart="blankc();" onclick="test()">提交</button>
+	<button type="submit" id="btn" onclick="test()">提交</button>
+	<div id="footi">
+		<a href="qanda.html">&nbsp;&nbsp;&nbsp;?&nbsp;&nbsp;&nbsp;</a>
+	</div>
 </body>
 <script>
-console.log(document.getElementsByTagName('meta')["Description"].content);
+	console.log(document.getElementsByTagName('meta')["Description"].content);
 	console.log(document.getElementsByTagName('meta')["Copyright"].content);
-	document.getElementById("name").focus();
-	document.onkeypress=function(){if (event.keyCode==13)blankc();}
-	var ins = document.getElementsByTagName("input");
-	function blankc () {
-		var inputs = document.getElementsByTagName("input");
-		for (var i=0; i<inputs.length-1; i++) {
-			if (inputs[i].value==null||inputs[i].value==""){
-				document.getElementById("btn").disabled=true;
-				warning (inputs[i].placeholder ,inputs[i]);
-				inputs[i].focus();
-				break;
-			}
-			else{
-				document.getElementById("btn").disabled=false;
-			}
-		}
-	}
+	// document.getElementById("name").focus();
 
-	function check (obj) {
-		validate(obj);
-		switch (obj.name)
+	function changeopt (obj) {
+		switch (document.getElementById("GWleibie").value)
 		{
-			case "phone":
-			checkMobile(obj);
+			case "1":
+			fillmubiao (jishu,obj);
+			var basic=jishulei;
 			break;
-			case "email":
-			checkEmail(obj);
+			case "2":
+			fillmubiao (chanpin,obj);
+			var basic=chanpinlei;
 			break;
-			case "year":
-			checkYear(obj);
+			case "3":
+			fillmubiao (sheji,obj);
+			var basic=shejilei;
+			break;
+			case "4":
+			fillmubiao (yunying,obj);
+			var basic=yunyinglei;
 			break;
 		}
 	}
-	function validate(obj)
-	{
-		if (obj.value==null||obj.value=="")
+	function changeopt2 (obj) {
+		switch (document.getElementById("CSleibie").value)
 		{
-			document.getElementById("btn").disabled=true;
-			warning (obj.placeholder,obj);
+			case "1":
+			fillmubiao (yixian,obj);
+			break;
+			case "2":
+			fillmubiao (yixian2,obj);
+			var addi_CS=gongzuochengshi[5];
+			break;
+			case "3":
+			fillmubiao (shenghui,obj);
+			var addi_CS=gongzuochengshi[6];
+			break;
 		}
-		else {
-			document.getElementById("btn").disabled=false;
-			flicker(1);
-			clearwar();
-		}
 	}
-	function checkMobile(obj){   
-		var regu =/^1[3|4|5|8][0-9]{9}$/; 
-		var re = new RegExp(regu); 
-		if (re.test(obj.value)) {
-			flicker(1);
-			clearwar();
-		}else{ 
-			warning ("请输入正确的手机号",obj);
-			obj.value="";
-		} 
-	} 
-
-	function checkEmail(obj){  
-		var regu = /^[-_A-Za-z0-9]+@([_A-Za-z0-9]+\.)+[A-Za-z0-9]{2,3}$/; 
-		var re = new RegExp(regu); 
-		if (re.test(obj.value)){
-			flicker(1)
-			clearwar();
-		}else{
-			warning ("请输入正确的邮箱",obj);
-			obj.value="";
-		} 
-	}
-	function checkYear(obj) {
-		var regu =/^201[0-6]{1,1}$/; 
-		var re = new RegExp(regu); 
-		if (re.test(obj.value)) { 
-			flicker(1)
-			clearwar();
-		}else{ 
-			warning ("请输入正确的年份，2010~2016",obj);
-			obj.value="";
-		} 
-	}
-	function warning (text, obj) {
-		// obj.focus();
-		flicker(2);	
-		document.getElementById("btn").disabled=true;
-		document.getElementById("warning").innerHTML="";
-		var para=document.createElement("p");
-		para.id="warningc"
-		var node=document.createTextNode(text+"");
-		para.appendChild(node);
-		var element=document.getElementById("warning");
-		element.appendChild(para);	
-	}
-	function clearwar () {
-		document.getElementById("btn").disabled=false;
-		document.getElementById("warning").innerHTML="";
-	}
-	function flicker (n) 
-	{
-		document.getElementById('light').setAttribute("class", "breathshut"); 
-		if (n==1) {
-			document.getElementById('light').setAttribute("class", "breath1"); 
-		};
-		if (n==2) {
-			document.getElementById('light').setAttribute("class", "breath2"); 
+	function fillmubiao (obj,pos) {
+		pos.innerHTML="";
+		for (var i = obj.length - 1; i >= 0; i--) {
+			var para=document.createElement("option");
+			para.value=i;
+			var node=document.createTextNode(obj[i]);
+			para.appendChild(node);
+			var element=pos;
+			element.appendChild(para);
 		};
 	}
 	function test()
