--- a/1000hr/index.html
+++ b/1000hr/index.html
@@ -18,49 +18,47 @@
     <script type="text/javascript" src="jquery.scrollTo.js"></script>
 </head>
 <body>
-    <div id="header">
-        <div style="margin-top:8px;width:130px;float:left;">
-            <svg id="qnxg-logo" version="1.1"
-            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-            viewBox="0 0 709.291 170.025" enable-background="new 0 0 709.291 170.025"
-            xml:space="preserve">
-            <defs>   </defs>
-            <g>
-                <g>
-                    <path fill="#ffffff" d="M359.231,17.607v5.58h38.822v34.626h-12.447l0.297-4.692h-20.186l-4.709,51.942l21.009,0.08l0.297-2.13
-                    l15.611-0.12l-1.969,34.316c0,0-1.161,11.384-13.808,10.796l-22.917,0.131l21.134,8.949l-0.026,12.714
-                    c0,0,33.621,0.9,35.202-29.229l1.974-41.077l-35,0.024l2.863-37.595h12.774v5.085h19.363V17.607H359.231z"/>
-                    <path fill="#ffffff" d="M454.2,2.277l22.69,22.824c0,0,17.75-8.72,5.194-18.695c0,0-5.157-4.399-12.444-5.946
-                    C465.057-0.512,459.563,0.04,454.2,2.277z"/>
-                    <path fill="#ffffff" d="M421.503,33.032h34.782l-27.626,48.931l-7.588,0.012l7.712,22.867l40.996-13.698l-31.418,53.528h-14.62
-                    l7.185,25.353l74.927-17.047l6.79,16.825c26.511-9.406,13.648-28.844,12.05-31.309c-12.446-19.036-36.38-29.614-36.38-29.614
-                    l14.27,36.095h-54.046l60.173-78.198h-24.435l-9.269,15.257l-34.863,0.047l43.328-49.301h44.443V28.25H421.503V33.032z"/>
-                </g>
-                <polygon fill="#ffffff" points="6.842,38.125 73.891,31.111 73.891,78.724 0,78.724 0,83.149 73.891,83.149 73.847,169.915 
-                99.622,169.915 99.672,83.149 168.671,83.338 168.671,78.535 99.475,78.535 99.475,28.298 157.755,21.889 151.836,0.109     "/>
-                <path fill="#ffffff" d="M287.018,116.977l0.197-47.671h49.988v-4.421h-49.796V25.867h53.886v-5.189H232.183
-                c7.6-9.227,11.302-20.569,11.302-20.569h-28.058c-5.261,29.025-31.958,70.157-31.958,70.157
-                c31.373-22.488,45.791-45.361,45.791-45.361h33.596v39.98H231.21v-6.536h-23.19v58.625h-28.176v4.422h83.012v48.519h23.966
-                l0.195-48.904h62.382v-4.035H287.018z M262.856,116.974H231.21V69.29h31.646V116.974z"/>
-                <g>
-                    <polygon fill="#ffffff" points="597.013,76.293 615.999,76.293 615.999,16.474 624.374,16.474 624.374,12.551 543.959,12.551 
-                    543.959,16.474 597.013,16.474         "/>
-                    <path fill="#ffffff" d="M588.914,67.408V32.23h-26.805v-5.188h-15.078v44.401h15.357v-7.207h10.89v3.172H588.914z M562.109,60.774
-                    V35.116h11.169v25.658H562.109z"/>
-                    <path fill="#ffffff" d="M615.999,144.185V85.296h13.121v-4.327h-89.908v4.327h57.801v57.164c0,4.899-5.866,6.343-5.866,6.343
-                    l-21.159,0.061l18.926,9.627l-0.303,11.534C618.27,170.025,615.999,144.185,615.999,144.185z"/>
-                    <path fill="#ffffff" d="M574.256,135.345h15.636V96.712h-27.922v-4.064h-15.915v50.771h15.636v-10.667h12.565V135.345z
-                    M561.782,129.196v-28.835h12.751v28.835H561.782z"/>
-                    <path fill="#ffffff" d="M648.106,34.551h32.457c-0.825,4.405-8.275,35.603-8.275,35.603c24.502-18.16,33.327-49.079,33.327-49.079
-                    h-22.756l-1.686,10.015h-31.23C651.147,28.594,659.194,0,659.194,0h-24.416c-4.672,51.787-14.079,73.042-14.079,73.042
-                    C638.373,59.28,648.106,34.551,648.106,34.551z"/>
-                    <path fill="#ffffff" d="M669.732,69.411v-18.96h-22.477c-1.963,72.86-38.2,119.352-38.2,119.352
-                    c43.202-15.204,49.328-87.052,49.328-87.052c-0.105,34.325,38.722,87.052,38.722,87.052l12.187-21.555
-                    C673.858,113.452,669.732,69.411,669.732,69.411z"/>
-                </g>
-            </g></svg>
-        </div>
-        <div class="block" id="b1">加入</div>
+	<div id="header">
+	<div style="margin-top:5px;width:130px;height:40px;float:left;">
+			<svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			viewBox="0 0 210 50" style="enable-background:new 0 0 210 50;height: 40px;" xml:space="preserve">
+			<style type="text/css">
+				.st0{fill:#FFFFFF;}
+			</style>
+			<g id="XMLID_362_">
+				<g id="XMLID_374_">
+					<g id="XMLID_437_">
+						<path id="XMLID_440_" class="st0" d="M106.7,5.2v1.6h11.4V17h-3.7l0.1-1.4h-5.9l-1.4,15.3l6.2,0l0.1-0.6l4.6,0l-0.6,10.1
+						c0,0-0.3,3.3-4.1,3.2l-6.7,0l6.2,2.6l0,3.7c0,0,9.9,0.3,10.4-8.6l0.6-12.1l-10.3,0l0.8-11.1h3.8v1.5h5.7V5.2H106.7z"/>
+						<path id="XMLID_439_" class="st0" d="M134.6,0.7l6.7,6.7c0,0,5.2-2.6,1.5-5.5c0,0-1.5-1.3-3.7-1.7C137.8-0.2,136.2,0,134.6,0.7z"
+						/>
+						<path id="XMLID_438_" class="st0" d="M125,9.7h10.2l-8.1,14.4l-2.2,0l2.3,6.7l12.1-4L130,42.5h-4.3l2.1,7.5l22-5l2,4.9
+						c7.8-2.8,4-8.5,3.5-9.2c-3.7-5.6-10.7-8.7-10.7-8.7l4.2,10.6H133l17.7-23h-7.2l-2.7,4.5l-10.3,0l12.7-14.5h13.1V8.3H125V9.7z"/>
+					</g>
+					<polygon id="XMLID_436_" class="st0" points="3.1,11.2 22.8,9.1 22.8,23.2 1.1,23.2 1.1,24.5 22.8,24.5 22.8,50 30.4,50 
+					30.4,24.5 50.7,24.5 50.7,23.1 30.3,23.1 30.3,8.3 47.5,6.4 45.7,0 		"/>
+					<path id="XMLID_433_" class="st0" d="M85.5,34.4l0.1-14h14.7v-1.3H85.6V7.6h15.8V6.1H69.3c2.2-2.7,3.3-6,3.3-6h-8.3
+					C62.9,8.6,55,20.7,55,20.7c9.2-6.6,13.5-13.3,13.5-13.3h9.9v11.8h-9.3v-1.9h-6.8v17.2H54v1.3h24.4V50h7l0.1-14.4h18.3v-1.2H85.5z
+					M78.4,34.4h-9.3v-14h9.3V34.4z"/>
+					<g id="XMLID_420_">
+						<polygon id="XMLID_432_" class="st0" points="176.6,22.4 182.2,22.4 182.2,4.8 184.7,4.8 184.7,3.7 161,3.7 161,4.8 176.6,4.8 
+						"/>
+						<path id="XMLID_429_" class="st0" d="M174.3,19.8V9.5h-7.9V8h-4.4V21h4.5v-2.1h3.2v0.9H174.3z M166.4,17.9v-7.5h3.3v7.5H166.4z"
+						/>
+						<path id="XMLID_428_" class="st0" d="M182.2,42.4V25.1h3.9v-1.3h-26.4v1.3h17v16.8c0,1.4-1.7,1.9-1.7,1.9l-6.2,0l5.6,2.8
+						l-0.1,3.4C182.9,50,182.2,42.4,182.2,42.4z"/>
+						<path id="XMLID_425_" class="st0" d="M169.9,39.8h4.6V28.4h-8.2v-1.2h-4.7v14.9h4.6V39h3.7V39.8z M166.3,38v-8.5h3.7V38H166.3z"
+						/>
+						<path id="XMLID_424_" class="st0" d="M191.7,10.2h9.5c-0.2,1.3-2.4,10.5-2.4,10.5c7.2-5.3,9.8-14.4,9.8-14.4h-6.7l-0.5,2.9h-9.2
+						c0.4-0.7,2.7-9.1,2.7-9.1h-7.2c-1.4,15.2-4.1,21.5-4.1,21.5C188.8,17.4,191.7,10.2,191.7,10.2z"/>
+						<path id="XMLID_423_" class="st0" d="M198,20.4v-5.6h-6.6c-0.6,21.4-11.2,35.1-11.2,35.1c12.7-4.5,14.5-25.6,14.5-25.6
+						c0,10.1,11.4,25.6,11.4,25.6l3.6-6.3C199.2,33.4,198,20.4,198,20.4z"/>
+					</g>
+				</g>
+			</g>
+		</svg>
+	</div>
+	<div class="block" id="b1">加入</div>
         <div class="block" id="b2">岗位</div>
         <div class="block" id="b3">我们</div>
     </div>
@@ -286,17 +284,24 @@
 
 </body>
 <script>
-    window.onscroll = function(){
-        var t = document.body.scrollTop; 
+	window.onscroll = function(){
+		if (document.body && document.body.scrollTop)
+		{
+			t=document.body.scrollTop; 
+		}
+		if (document.documentElement && document.documentElement.scrollTop)
+		{
+			t=document.documentElement.scrollTop;
+		}
         var top_header = document.getElementById( "header" );
         var top_page_1 = document.getElementById( "page_1" ).offsetHeight;
-        console.log(top_page_1);
+        console.log(t);
         if( t >= top_page_1 ) {
             top_header.style.top = "0";
         } else {
             top_header.style.top = "-50px";
         }
-    }
+	}
     $(function(){ 
         $("#b3").click(function(){ 
             $.scrollTo('#page_1',1000); 
