--- a/1000hr/index.html
+++ b/1000hr/index.html
@@ -138,7 +138,7 @@
                 <li><strong>前端工程师</strong></li>
                 <li><strong>Python/PHP工程师</strong></li>
                 <li><strong>安卓程序员</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>掌握Html，Css，Js/Jquery等；有PHP基础，会进行基本功能测试，了解SQL注入测试和XSS测试的常用手法；有Java基础，有安卓开发经验，了解XML和数据库。<br><strong>P.S.：</strong>有GitHub / V2EX账号者优先；有个人博客者优先；有项目经历 /个人作品者优先；对自己的前端或者PHP开发能力很有自信的小伙伴也可以报名~</li>
+                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>掌握Html，Css，Js/Jquery等；有PHP基础，会进行基本功能测试，了解SQL注入测试和XSS测试的常用手法；有Java基础，有安卓开发经验，了解XML和数据库。<br><strong>P.S.</strong>有GitHub / V2EX账号者优先；有个人博客者优先；有项目经历 /个人作品者优先；对自己的前端或者PHP开发能力很有自信的小伙伴也可以报名~</li>
             </ul>
         </div>
         <div class="rolelist">
@@ -156,7 +156,7 @@
                 <li><strong>平面设计师</strong></li>
                 <li><strong>网页设计师</strong></li>
                 <li><strong>交互与视觉设计师</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>网页设计过程中需求分析、交互设计、视觉设计、平面设计，涉及Photoshop、Adobe Illustrator、CorelDRAW等设计软件使用，最好具备html、css、javascript等方面的知识<br><strong>P.S.：</strong>You need imagination</li>
+                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>网页设计过程中需求分析、交互设计、视觉设计、平面设计，涉及Photoshop、Adobe Illustrator、CorelDRAW等设计软件使用，最好具备html、css、javascript等方面的知识<br><strong>P.S.</strong>You need imagination</li>
             </ul>
         </div>
         <div class="rolelist">
@@ -173,8 +173,7 @@
             <ul>
                 <li><strong>原创编辑</strong></li>
                 <li><strong>审稿编辑</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>原创编辑，用文字分享创意、经验与见解。要求能及时捕捉网络与时事热点，最好能根据热点提出相关的独特创意或深刻见解。我们欢迎资深吃货、旅游达人、中二病患等在某一方面有丰富经验的人加入，有微信或微博公众号内容运营者优先；
-                    审稿编辑，网页内容的更新与新闻稿件的审核。要求做事认真细致且对新闻写作有基本的认识。</li>
+                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>原创编辑：用文字分享创意、经验与见解。要求能及时捕捉网络与时事热点，最好能根据热点提出相关的独特创意或深刻见解。            审稿编辑：网页内容的更新与新闻稿件的审核。要求做事认真细致且对新闻写作有基本的认识。<br><strong>P.S.</strong>我们欢迎资深吃货、旅游达人、中二病患等在某一方面有丰富经验的人加入，有微信或微博公众号内容运营者优先；</li>
                 </ul>
             </div>
             <div class="rolelist">
@@ -208,7 +207,7 @@
                 <ul>
                     <li><strong>调研专员</strong></li>
                     <li><strong>运营专员</strong></li>
-                    <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>行政专员：负责工作室日常事务及规章制度的制定；人力专员：负责人员的招聘、培训及组织内部活动；财务专员：负责管理团队收支；宣传专员：负责工作室对外宣传及外交事务</li>
+                    <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>行政：负责工作室日常事务及规章制度的制定人力：负责人员的招聘、培训及组织内部活动；财务：负责管理团队收支；宣传：负责工作室对外宣传及外交事务；要求组织能力或人际沟通能力强，胆大心细，同时责任心强。</li>
                 </ul>
             </div>
             <div class="rolelist">
@@ -220,7 +219,7 @@
             </div>
         </div>  
         <div id="page_7">
-            <h1>加入我们</h1>
+            <h1>加入我们</h1><!-- 
             <div class="discribe" style="border: 2px dashed #fff; margin-top:40px;">
                 <ul id="listheader" onclick="show_hide (this)" style="cursor:pointer"><li><strong>负责人名单</strong></li></ul><ul id="listbody" style="display:none;">
                     <li>程序员</li>
@@ -239,7 +238,7 @@
                     <li>吴玉婷&nbsp&nbspEmail：624129059@qq.com</li>
                     <li>李静&nbsp&nbspEmail：835859065@qq.com</li>
                 </ul>
-            </div>
+            </div> -->
             <div class="discribe" style="border: 2px dashed #fff; margin-top:40px;">
                 <ul>
                     <li><strong>报名流程</strong></li>
