--- a/1000hr/index.html
+++ b/1000hr/index.html
@@ -64,54 +64,15 @@
     </div>
     <div id="page_1">
         <div id="logo">
-            <svg id="qnxg-logo" version="1.1"
-            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-            viewBox="0 0 709.291 170.025" enable-background="new 0 0 709.291 170.025"
-            xml:space="preserve">
-            <defs>   </defs>
-            <g>
-                <g>
-                    <path fill="#ffffff" d="M359.231,17.607v5.58h38.822v34.626h-12.447l0.297-4.692h-20.186l-4.709,51.942l21.009,0.08l0.297-2.13
-                    l15.611-0.12l-1.969,34.316c0,0-1.161,11.384-13.808,10.796l-22.917,0.131l21.134,8.949l-0.026,12.714
-                    c0,0,33.621,0.9,35.202-29.229l1.974-41.077l-35,0.024l2.863-37.595h12.774v5.085h19.363V17.607H359.231z"/>
-                    <path fill="#ffffff" d="M454.2,2.277l22.69,22.824c0,0,17.75-8.72,5.194-18.695c0,0-5.157-4.399-12.444-5.946
-                    C465.057-0.512,459.563,0.04,454.2,2.277z"/>
-                    <path fill="#ffffff" d="M421.503,33.032h34.782l-27.626,48.931l-7.588,0.012l7.712,22.867l40.996-13.698l-31.418,53.528h-14.62
-                    l7.185,25.353l74.927-17.047l6.79,16.825c26.511-9.406,13.648-28.844,12.05-31.309c-12.446-19.036-36.38-29.614-36.38-29.614
-                    l14.27,36.095h-54.046l60.173-78.198h-24.435l-9.269,15.257l-34.863,0.047l43.328-49.301h44.443V28.25H421.503V33.032z"/>
-                </g>
-                <polygon fill="#ffffff" points="6.842,38.125 73.891,31.111 73.891,78.724 0,78.724 0,83.149 73.891,83.149 73.847,169.915 
-                99.622,169.915 99.672,83.149 168.671,83.338 168.671,78.535 99.475,78.535 99.475,28.298 157.755,21.889 151.836,0.109     "/>
-                <path fill="#ffffff" d="M287.018,116.977l0.197-47.671h49.988v-4.421h-49.796V25.867h53.886v-5.189H232.183
-                c7.6-9.227,11.302-20.569,11.302-20.569h-28.058c-5.261,29.025-31.958,70.157-31.958,70.157
-                c31.373-22.488,45.791-45.361,45.791-45.361h33.596v39.98H231.21v-6.536h-23.19v58.625h-28.176v4.422h83.012v48.519h23.966
-                l0.195-48.904h62.382v-4.035H287.018z M262.856,116.974H231.21V69.29h31.646V116.974z"/>
-                <g>
-                    <polygon fill="#ffffff" points="597.013,76.293 615.999,76.293 615.999,16.474 624.374,16.474 624.374,12.551 543.959,12.551 
-                    543.959,16.474 597.013,16.474         "/>
-                    <path fill="#ffffff" d="M588.914,67.408V32.23h-26.805v-5.188h-15.078v44.401h15.357v-7.207h10.89v3.172H588.914z M562.109,60.774
-                    V35.116h11.169v25.658H562.109z"/>
-                    <path fill="#ffffff" d="M615.999,144.185V85.296h13.121v-4.327h-89.908v4.327h57.801v57.164c0,4.899-5.866,6.343-5.866,6.343
-                    l-21.159,0.061l18.926,9.627l-0.303,11.534C618.27,170.025,615.999,144.185,615.999,144.185z"/>
-                    <path fill="#ffffff" d="M574.256,135.345h15.636V96.712h-27.922v-4.064h-15.915v50.771h15.636v-10.667h12.565V135.345z
-                    M561.782,129.196v-28.835h12.751v28.835H561.782z"/>
-                    <path fill="#ffffff" d="M648.106,34.551h32.457c-0.825,4.405-8.275,35.603-8.275,35.603c24.502-18.16,33.327-49.079,33.327-49.079
-                    h-22.756l-1.686,10.015h-31.23C651.147,28.594,659.194,0,659.194,0h-24.416c-4.672,51.787-14.079,73.042-14.079,73.042
-                    C638.373,59.28,648.106,34.551,648.106,34.551z"/>
-                    <path fill="#ffffff" d="M669.732,69.411v-18.96h-22.477c-1.963,72.86-38.2,119.352-38.2,119.352
-                    c43.202-15.204,49.328-87.052,49.328-87.052c-0.105,34.325,38.722,87.052,38.722,87.052l12.187-21.555
-                    C673.858,113.452,669.732,69.411,669.732,69.411z"/>
-                </g>
-            </g></svg>
+        <img src="logo.png" style="width:100%">
         </div>
         <div class="discribe">
             <ul>
                 <li>我们是湖南大学校园网络产品开发和运营团队。</li>
                 <li>我们隶属于湖南大学党委学生工作部，以学生为主体自主管理。</li>
                 <li>我们致力于用网络帮助湖大人更好地学习、生活、娱乐和工作。</li>
-                <li>我们在寻找年轻有为、充满激情的你和我们一起，在最大可能的地方完成最大可能的事~</li>
             </ul>
-            <h1>不一样的我们，正在寻找不一样的你~</h1>
+            <h1>2015秋季招新</h1>
         </div>
         <div class="rolelist">
             <div class="role" id="r1"><a>
@@ -138,12 +99,12 @@
                 <li><strong>前端工程师</strong></li>
                 <li><strong>Python/PHP工程师</strong></li>
                 <li><strong>安卓程序员</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>掌握Html，Css，Js/Jquery等；有PHP基础，会进行基本功能测试，了解SQL注入测试和XSS测试的常用手法；有Java基础，有安卓开发经验，了解XML和数据库。<br><strong>P.S.</strong>有GitHub / V2EX账号者优先；有个人博客者优先；有项目经历 /个人作品者优先；对自己的前端或者PHP开发能力很有自信的小伙伴也可以报名~</li>
+                <li style="border: 2px dashed #fff; text-align:left; margin-top:40px;"><strong>职位介绍：</strong>前端工程师：掌握DIV+CSS布局的HTML代码编写，熟练手写标准CSS样式表，能进行页面重构与解决常见浏览器兼容问题。理解并掌握JavaScript语言核心技术DOM、BOM、Ajax、JSON等，熟悉HTML5、CSS3与W3C Web标准，至少了解一种后端程序语言。关注页面性能优化与用户体验研究对表现与数据分离，html语义化等有较深刻理解者优先。有相关网站开发经历者优先，会使用Node.js前端工具优先。<br>Python/PHP工程师：掌握PHP、MVC 模式、Smarty 等流行开发框架，精通面向对象的分析和设计技术，包括设计模式、UML建模等，拥有良好的编码风格和编程习惯；掌握SQL语言, 能熟练使用MySQL；<br>安卓程序员：有Java基础，有安卓开发经验，了解XML和数据库。<br><strong>P.S.</strong>有GitHub / V2EX账号者优先；有个人博客者优先；有项目经历 /个人作品者优先；对自己的前端或者PHP开发能力很有自信的小伙伴也可以报名~</li>
             </ul>
         </div>
         <div class="rolelist">
             <div class="role sign_up">
-                <a style="color: #8058a5">
+                <a style="color: #CF3C3A">
                     我要报名
                 </a>
             </div>
@@ -156,12 +117,12 @@
                 <li><strong>平面设计师</strong></li>
                 <li><strong>网页设计师</strong></li>
                 <li><strong>交互与视觉设计师</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>网页设计过程中需求分析、交互设计、视觉设计、平面设计，涉及Photoshop、Adobe Illustrator、CorelDRAW等设计软件使用，最好具备html、css、javascript等方面的知识<br><strong>P.S.</strong>You need imagination</li>
+                <li style="border: 2px dashed #fff; text-align:left; margin-top:40px;"><strong>职位介绍：</strong>进行网页设计过程中需求分析、交互设计、视觉设计及日常平面设计的工作，工作内容涉及Photoshop、AI、Fireworks等设计软件使用以及html、css、javascript等方面的知识。要求具备创造性的想象力和发达的审美感受能力。<br><strong>P.S.</strong>You need imagination</li>
             </ul>
         </div>
         <div class="rolelist">
             <div class="role sign_up">
-                <a style="color: #f37b1d">
+                <a style="color: #3683BB">
                     我要报名
                 </a>
             </div>
@@ -173,12 +134,12 @@
             <ul>
                 <li><strong>原创编辑</strong></li>
                 <li><strong>审稿编辑</strong></li>
-                <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>原创编辑：用文字分享创意、经验与见解。要求能及时捕捉网络与时事热点，最好能根据热点提出相关的独特创意或深刻见解。            审稿编辑：网页内容的更新与新闻稿件的审核。要求做事认真细致且对新闻写作有基本的认识。<br><strong>P.S.</strong>我们欢迎资深吃货、旅游达人、中二病患等在某一方面有丰富经验的人加入，有微信或微博公众号内容运营者优先；</li>
+                <li style="border: 2px dashed #fff; text-align:left; margin-top:40px;"><strong>职位介绍：</strong>原创编辑：用文字分享创意、经验与见解。要求能及时捕捉网络与时事热点，最好能根据热点提出相关的独特创意或深刻见解。            审稿编辑：网页内容的更新与新闻稿件的审核。要求做事认真细致且对新闻写作有基本的认识。<br><strong>P.S.</strong>我们欢迎资深吃货、旅游达人、中二病患等在某一方面有丰富经验的人加入，有微信或微博公众号内容运营者优先；</li>
                 </ul>
             </div>
             <div class="rolelist">
                 <div class="role sign_up">
-                    <a style="color: #5eb95e">
+                    <a style="color: #613C7F">
                         我要报名
                     </a>
                 </div>
@@ -190,12 +151,12 @@
                 <ul>
                     <li><strong>调研专员</strong></li>
                     <li><strong>运营专员</strong></li>
-                    <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>调研专员：收集学校和网络上热门话题，对用户和校园微信环境进行定期需求分析。要求对市场调研有兴趣，对用户需求有一定认识同时能熟练使用各平台网络工具，对热点敏感；运营专员：同用户交流并反馈，定时更新微信号内容，维护微信号功能。要求对校内各网络平台熟悉。</li>
+                    <li style="border: 2px dashed #fff; text-align:left; margin-top:40px;"><strong>职位介绍：</strong>调研专员：收集学校和网络上热门话题，对用户和校园微信环境进行定期需求分析。要求对市场调研有兴趣，对用户需求有一定认识同时能熟练使用各平台网络工具，对热点敏感；运营专员：同用户交流并反馈，定时更新微信号内容，维护微信号功能。要求对校内各网络平台熟悉。</li>
                 </ul>
             </div>
             <div class="rolelist">
                 <div class="role sign_up">
-                    <a style="color: #A1C85C">
+                    <a style="color: #5eb95e">
                         我要报名
                     </a>
                 </div>
@@ -205,14 +166,13 @@
             <h1>行政</h1>
             <div class="discribe">
                 <ul>
-                    <li><strong>调研专员</strong></li>
-                    <li><strong>运营专员</strong></li>
-                    <li style="border: 2px dashed #fff; margin-top:40px;"><strong>职位要求：</strong>行政：负责工作室日常事务及规章制度的制定人力：负责人员的招聘、培训及组织内部活动；财务：负责管理团队收支；宣传：负责工作室对外宣传及外交事务；要求组织能力或人际沟通能力强，胆大心细，同时责任心强。</li>
+                    <li><strong>行政专员</strong></li>
+                    <li style="border: 2px dashed #fff; text-align:left; margin-top:40px;"><strong>职位介绍：</strong>行政：负责工作室日常事务及规章制度的制定；人力：负责人员的招聘、培训及组织内部活动；财务：负责管理团队收支；宣传：负责工作室对外宣传及外交事务；要求组织能力或人际沟通能力强，胆大心细，同时责任心强。</li>
                 </ul>
             </div>
             <div class="rolelist">
                 <div class="role sign_up">
-                    <a style="color: #dd514c">
+                    <a style="color: #96BE4E">
                         我要报名
                     </a>
                 </div>
