--- a/rc/index.html
+++ b/rc/index.html
@@ -56,36 +56,35 @@
     </div>    
     <div id="describe">Tap the screen/Press any key to pause <br>Tap/Press again to continue <br>By Parizus</div>
     <div id="r_ring">
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.2" baseProfile="tiny" id="图层_1"
-     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
-     xml:space="preserve">
-<linearGradient id="XMLID_215_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-    <stop  offset="0" style="stop-color:#FF0000"/>
-    <stop  offset="9e-002" style="stop-color:#999999"/>
-    <stop  offset="0.5" style="stop-color:#999999"/>
-</linearGradient>
-<path id="XMLID_20_" fill="url(#XMLID_215_)" d="M432.4,128.3C395,90.8,346.2,68.8,293.9,65.4c-3.8-0.2-6.9-3.1-7.4-6.8L280,14.3
-    l-6.4,44.3c-0.5,3.8-3.7,6.6-7.4,6.8c-51.2,3.2-99,24.4-136,60.4c-40.4,39.3-63.8,93-65,149.4c-1.3,61.9,23.3,120.1,68.7,162.4
-    c40,37.2,92.9,57.7,147.5,57.3c57-0.3,110.5-22.7,150.8-63c40.2-40.2,62.6-93.6,63-150.4C495.4,224.3,472.8,168.9,432.4,128.3z
-     M275.7,485c-109.9-2.3-199-91.9-200.7-201.8c-1.7-111.5,86.1-203.3,196.1-208c2.9-0.1,5.9-0.2,8.8-0.2s5.9,0.1,8.8,0.2
-    C397.8,79.8,485,169.9,485,280C485,394.5,390.7,487.3,275.7,485z"/>
-<circle id="XMLID_1_" fill="none" cx="280" cy="280" r="280"/>
-</svg>
+        <?xml version="1.0" encoding="utf-8"?>
+        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg version="1.2" baseProfile="tiny" id="图层_1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
+        xml:space="preserve">
+        <linearGradient id="XMLID_215_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
+            <stop  offset="0" style="stop-color:#FF0000"/>
+            <stop  offset="9e-002" style="stop-color:#999999"/>
+            <stop  offset="0.5" style="stop-color:#999999"/>
+        </linearGradient>
+        <path id="XMLID_20_" fill="url(#XMLID_215_)" d="M432.4,128.3C395,90.8,346.2,68.8,293.9,65.4c-3.8-0.2-6.9-3.1-7.4-6.8L280,14.3
+        l-6.4,44.3c-0.5,3.8-3.7,6.6-7.4,6.8c-51.2,3.2-99,24.4-136,60.4c-40.4,39.3-63.8,93-65,149.4c-1.3,61.9,23.3,120.1,68.7,162.4
+        c40,37.2,92.9,57.7,147.5,57.3c57-0.3,110.5-22.7,150.8-63c40.2-40.2,62.6-93.6,63-150.4C495.4,224.3,472.8,168.9,432.4,128.3z
+        M275.7,485c-109.9-2.3-199-91.9-200.7-201.8c-1.7-111.5,86.1-203.3,196.1-208c2.9-0.1,5.9-0.2,8.8-0.2s5.9,0.1,8.8,0.2
+        C397.8,79.8,485,169.9,485,280C485,394.5,390.7,487.3,275.7,485z"/>
+        <circle id="XMLID_1_" fill="none" cx="280" cy="280" r="280"/></svg>
 
     </div>
     <div id="g_ring">
         <?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.2" baseProfile="tiny" id="图层_1"
-     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
-     xml:space="preserve">
-<linearGradient id="XMLID_216_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-    <stop  offset="0" style="stop-color:#00FF00"/>
-    <stop  offset="9e-002" style="stop-color:#808080"/>
-    <stop  offset="0.5" style="stop-color:#808080"/>
-</linearGradient>
+        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg version="1.2" baseProfile="tiny" id="图层_1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
+        xml:space="preserve">
+        <linearGradient id="XMLID_216_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
+            <stop  offset="0" style="stop-color:#00FF00"/>
+            <stop  offset="9e-002" style="stop-color:#808080"/>
+            <stop  offset="0.5" style="stop-color:#808080"/>
+        </linearGradient>
         <path id="XMLID_23_" fill="url(#XMLID_216_)" d="M287.9,68.7L280,14.3l-7.9,54.4c-0.5,3.7-3.6,6.5-7.4,6.8C157.8,83.5,73.4,173.9,75,283.2
         c1.7,109.9,90.8,199.5,200.7,201.8c115,2.4,209.3-90.5,209.3-205c0-107.9-83.8-196.6-189.7-204.4C291.5,75.3,288.5,72.5,287.9,68.7z
         M280,475c-107.5,0-195-87.5-195-195c0-104.1,81.9-189.4,184.7-194.7c3.4-0.2,6.8-0.3,10.3-0.3s6.9,0.1,10.3,0.3
@@ -94,15 +93,15 @@
 
     </div>
     <div id="b_ring">
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.2" baseProfile="tiny" id="图层_1"
-     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
-     xml:space="preserve">
-<linearGradient id="XMLID_217_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
-    <stop  offset="0" style="stop-color:#0000FF"/>
-    <stop  offset="9e-002" style="stop-color:#666666"/>
-    <stop  offset="0.5" style="stop-color:#666666"/>
-</linearGradient>
+        <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+        <svg version="1.2" baseProfile="tiny" id="图层_1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 560 559.8"
+        xml:space="preserve">
+        <linearGradient id="XMLID_217_" gradientUnits="userSpaceOnUse" x1="279.9999" y1="14.33" x2="279.9999" y2="494.9999">
+            <stop  offset="0" style="stop-color:#0000FF"/>
+            <stop  offset="9e-002" style="stop-color:#666666"/>
+            <stop  offset="0.5" style="stop-color:#666666"/>
+        </linearGradient>
         <path id="XMLID_29_" fill="url(#XMLID_217_)" d="M289.4,78.9L280,14.3l-9.3,63.8c-0.6,4.1-3.9,7.3-8,7.7C163.2,94.6,85,178.3,85,280.1
         c0,107.1,87.4,194.6,194.5,194.9C387.2,475.3,475,387.7,475,280c0-101.9-78.6-185.8-178.3-194.3C292.9,85.4,289.9,82.6,289.4,78.9z
         M280,465c-102,0-185-83-185-185c0-102,83-185,185-185c102,0,185,83,185,185C465,382,382,465,280,465z"/>
