--- a/rc/index.html
+++ b/rc/index.html
@@ -63,8 +63,8 @@
      xml:space="preserve">
 <linearGradient id="XMLID_215_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
     <stop  offset="0" style="stop-color:#FF0000"/>
-    <stop  offset="8e-002" style="stop-color:#b3b3b3"/>
-    <stop  offset="0.3" style="stop-color:#b3b3b3"/>
+    <stop  offset="8e-002" style="stop-color:#a7a7a7"/>
+    <stop  offset="0.3" style="stop-color:#a7a7a7"/>
 </linearGradient>
 <circle fill="none" cx="-128" cy="192.2" r="300"/>
 <path fill="url(#XMLID_215_)" d="M-116.8-53.1L-128-97.8l-11.2,44.7c-0.8,3.3-3.7,5.8-7.1,6C-271.4-37.7-369.7,67.6-368,195.5
@@ -82,8 +82,8 @@
      xml:space="preserve">
 <linearGradient id="XMLID_216_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
     <stop  offset="0" style="stop-color:#00FF00"/>
-    <stop  offset="8e-002" style="stop-color:#999999"/>
-    <stop  offset="0.3" style="stop-color:#999999"/>
+    <stop  offset="8e-002" style="stop-color:#939393"/>
+    <stop  offset="0.3" style="stop-color:#939393"/>
 </linearGradient>
 <circle fill="none" cx="-128" cy="192.2" r="300"/>
 <path fill="url(#XMLID_216_)" d="M-114.3-42.9L-128-97.8l-13.7,54.9c-0.8,3.3-3.6,5.7-7,6C-265.2-26.5-356.7,70.8-358,189.6
@@ -101,8 +101,8 @@
         xml:space="preserve">
 <linearGradient id="XMLID_217_" gradientUnits="userSpaceOnUse" x1="-128" y1="-97.8" x2="-128" y2="432.2">
     <stop  offset="0" style="stop-color:#0000FF"/>
-    <stop  offset="8e-002" style="stop-color:#808080"/>
-    <stop  offset="0.3" style="stop-color:#808080"/>
+    <stop  offset="8e-002" style="stop-color:#7f7f7f"/>
+    <stop  offset="0.3" style="stop-color:#7f7f7f"/>
 </linearGradient>
         <circle fill="none" cx="-128" cy="192.2" r="300"/>
         <path fill="url(#XMLID_217_)" d="M-111.7-32.6L-128-97.8l-16.3,65.2c-0.8,3.3-3.6,5.7-6.9,6c-126.5,13.3-221.1,133.8-191.2,268.9
