Copyright statement and description

--- a/rc/index.html
+++ b/rc/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
+    <meta name="Description" content="Generate random color">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<meta name="robots" content="all">
+	<meta name="author" content="Parizus">
+	<meta name="Copyright" content="Copyright Parizus All Rights Reserved.">
     <title>Random Color</title>
     <link rel="stylesheet" href="./normalize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
